# ms_text_regress

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  README.md  attribution.py  dump.py  dump_all.py  eval.py  eval_dump.py  install_dev_cpu.sh  mi.py  nonlinear.py  pyproject.toml  setup.cfg  task_fit_from_dump.py  train.py  viewer.py
.github/workflows/: pre-commit.yml  pytest.yml
bert_ordinal/: __init__.py  datasets.py  dump.py  element_link.py  eval.py  experimental_regression.py  label_dist.py  mt_ordinal.py  ordinal.py  ordinal_regression.py  pipelines.py  samplers.py  transformers_utils.py
bert_ordinal/baseline_models/: classification.py  deberta_v2.py  regression.py  skl_wrap.py
bert_ordinal/ordinal_models/: bert.py  experimental.py  vglm.py
bert_ordinal/scripts/: train.py  utils.py
conda.recipe/: meta.yaml
contrib/: train.slurm
dataset_processing/: pyproject.toml
dataset_processing/ordinal_nlp_dataproc/cd_reviews/: cross_domain_reviews.py  metadata.py
dataset_processing/ordinal_nlp_dataproc/rt_critics/: dataset.py  download.py  multiscale_rt_critics.py  normalize.py  push.py  subdatasets.py
dataset_processing/workflow/: Snakefile
docs/: conf.py  datasets.md  index.rst  modules.md
ms_text_regress/: __init__.py  dump.py  element_link.py  eval.py  experimental_regression.py  initialisation.py  label_dist.py  ordinal.py  pipelines.py  samplers.py  transformers_utils.py
ms_text_regress/baseline_models/: classification.py  deberta_v2.py  regression.py  skl_wrap.py
ms_text_regress/ordinal_models/: bert.py  experimental.py  vglm.py
ms_text_regress/scripts/: eval_model.py  train.py
tests/: test_eval.py  test_link.py  test_models.py
tests/fixtures/: tiny_cross_domain_reviews.json  tiny_shoe_reviews.json
