[tool.poetry]
name = "bert-ordinal"
version = "0.1.0"
description = "Tools for doing ordinal regression with huggingface transformers/BERT"
authors = ["Frankie Robertson <frankie@robertson.name>"]
license = "Apache-v2"
readme = "README.md"
packages = [{include = "bert_ordinal"}]

[tool.poetry.dependencies]
python = "^3.8"
datasets = "^2.5.2"
transformers = "^4.22.2"
kaggle = "^1.5.12"
torch = "^1.12.1"
sklearn = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
