[tool.poetry]
name = "bert-ordinal"
version = "0.1.0"
description = "Tools for doing ordinal regression with huggingface transformers/BERT"
authors = ["Frankie Robertson <frankie@robertson.name>"]
license = "Apache-v2"
readme = "README.md"
packages = [{include = "bert_ordinal"}]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.22.2"

numba = { version = "^0.56.3", optional = true}

datasets = { version = "^2.5.2", optional = true }
kaggle = { version = "^1.5.12", optional = true }
evaluate = { version = "^0.2.2", optional = true }
scikit-learn = { version = "^1.1.2", optional = true }

[tool.poetry.extras]
demos = ["datasets", "kaggle", "evaluate", "numba", "scikit-learn"]
eval = ["numba"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
