[tool.poetry]
name = "bert-ordinal"
version = "0.1.0"
description = "Tools for doing ordinal regression with huggingface transformers/BERT"
authors = ["Frankie Robertson <frankie@robertson.name>"]
license = "Apache-v2"
readme = "README.md"
packages = [{include = "bert_ordinal"}]

[tool.poetry.dependencies]
python = "^3.8,!=3.9.7"
transformers = { version = "^4.22.2", extras = ["torch"] }

numba = { version = "^0.56.4", optional = true}

datasets = { version = "^2.5.2", optional = true }
kaggle = { version = "^1.5.12", optional = true }
evaluate = { version = "^0.2.2", optional = true }
scikit-learn = { version = "^1.1.2", optional = true }
tensorboardX = { version = "^2.5.1", optional = true }
streamlit = {version = "^1.15.1", optional = true}
streamlit-aggrid = {version = "^0.3.3", optional = true}
rpy2 = "^3.5.6"
orjson = "^3.8.4"
zuko = "^0.0.8"
umnn = "^1.68"

[tool.poetry.extras]
demos = ["datasets", "kaggle", "evaluate", "tensorboardX", "numba", "scikit-learn"]
datasets = ["datasets", "kaggle"]
eval = ["numba"]
viewer = ["streamlit", "streamlit-aggrid"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
Sphinx = "^5.3.0"
sphinx-autobuild = "^2021.3.14"
myst-parser = "^0.18.1"
sphinx-rtd-theme = "^1.0.0"
sphinx-autodoc-typehints = "^1.19.4"
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pre-commit = "^2.20.0"
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
