[tool.poetry]
name = "ordinal-nlp-dataproc"
version = "0.1.0"
description = ""
authors = ["Frankie Robertson <frankie@robertson.name>"]
license = "Apache-v2"
packages = [{include = "ordinal_nlp_dataproc"}]

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^2.6.1"
kaggle = "^1.5.12"
pandas = "^1.5.1"
scikit-learn = "^1.1.3"
snakemake = "^7.18.1"
click = "^8.1.3"
pyarrow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
